--- a/src/app/Components/character-list/character-list.component.html
+++ b/src/app/Components/character-list/character-list.component.html
@@ -1,8 +1,10 @@
 <div class="character-list">
   <div *ngFor="let character of characters" class="character-card">
-    <img [src]="character.image" alt="{{ character.name }}" class="character-image">
+    <div class="character-image-container">
+      <img [src]="character.image" alt="{{ character.name }}" class="character-image">
+    </div>
     <div class="character-details">
-      <h2>{{ character.name }}</h2>
+      <h2 class="character-name">{{ character.name }}</h2>
       <div class="character-status">
         <span class="status-dot" [ngClass]="{
           'alive': character.status === 'Alive',
